--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3"
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
+    "react-select": "^5.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
